--- a/components/home/FolderCardWrapper.module.css
+++ b/components/home/FolderCardWrapper.module.css
@@ -140,7 +140,7 @@
   min-width: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
+  justify-content: center;
 }
 
 @media (max-width: 700px) {
